Fix footer margin on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -30,11 +30,14 @@ img {
   line-height: 50px;
   overflow: hidden;
   font-weight: 300;
-  margin-top: 20px;
   color: #F2F2F2;
   a, h5 {
     color: #F2F2F2;
   }
+}
+
+.uk-footer-content {
+  margin-top: 20px;
 }
 
 .uk-cover-background {
